--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.servlet.context-path=/api
+spring.datasource.url=jdbc:mysql://mysqldb:3306/cookbook_db?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=sa
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.data.web.pageable.one-indexed-parameters=true
+spring.data.rest.max-page-size=1000
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+
+log4j.rootLogger=INFO, stdout
